Update: JWT + Login/Register/LostPass + User Service